--- a/text.html
+++ b/text.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<body>
+<div class="bg_test">
+まりさふぃっしゅブログ
+</div>
+<link href="https://github.com/marisafish/blog1/blob/dca007c236f444486022049c9d910ce559920cf2/text.css">
+</body>
+</head>
+</html>
 
