--- a/text.html
+++ b/text.html
@@ -7,7 +7,7 @@
 <div class="bg_test">
 まりさふぃっしゅブログ
 </div>
-<link href="https://github.com/marisafish/blog1/blob/dca007c236f444486022049c9d910ce559920cf2/text.css">
+<link href="https://github.com/marisafish/blog1/blob/dca007c236f444486022049c9d910ce559920cf2/text.css" rel="stylesheet" type="text/css">
 </body>
 </head>
 </html>
