article.html の更新

--- a/article.html
+++ b/article.html
@@ -43,6 +43,15 @@ font-size: 30px;
 </style>
 <body>
 <h1>まりさふぃっしゅブログ</h1>
+<div class="menu">
+<tr>
+<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
+<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
+<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
+<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
+<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td>
+</tr>
+</div>
 <h2>記事</h2>
 <div class="nyanko1">
 <h3>【にゃんこ大戦争】日本編第3章の西表島まで進みましたww</h3>
