--- a/article.html
+++ b/article.html
@@ -86,5 +86,20 @@ GooglePlayのリンクを載せておきます。
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jDeIdsMSdag"></iframe>
 </div>
 </div>
+<div class="notes">
+<p>まりさふぃっしゅ</p>
+<p>2024 marisafish</p>
+<tr>
+<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
+<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
+<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
+<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
+<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td><br>
+</tr>
+<a href="https://twitter.com/tirunoandreimu" target="_blank">Twitter</a>
+<a href="https://youtube.com/@marisafish967?feature=shared" target="_blank">Youtube</a>
+<a href="https://github.com/marisafish" target="_blank">Github</a>
+<p>このページはGithub Pagesを使用しています。</p>
+</div>
 </body>
 </html>
