--- a/sns.html
+++ b/sns.html
@@ -23,8 +23,32 @@ font-size: 30px;
 </style>
 <body>
 <h1>まりさふぃっしゅブログ</h1>
+<div class="menu">
+<tr>
+<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
+<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
+<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
+<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
+<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td>
+</tr>
+</div>
 <h2>SNS</h2>
 <h3>X</h3>
 <a class="twitter-timeline" href="https://twitter.com/tirunoandreimu?ref_src=twsrc%5Etfw">Tweets by tirunoandreimu</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div class="notes">
+<p>まりさふぃっしゅ</p>
+<p>2024 marisafish</p>
+<tr>
+<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
+<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
+<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
+<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
+<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td><br>
+</tr>
+<a href="https://twitter.com/tirunoandreimu" target="_blank">Twitter</a>
+<a href="https://youtube.com/@marisafish967?feature=shared" target="_blank">Youtube</a>
+<a href="https://github.com/marisafish" target="_blank">Github</a>
+<p>このページはGithub Pagesを使用しています。</p>
+</div>
 </body>
 </html>
