contacts.html の更新

--- a/contacts.html
+++ b/contacts.html
@@ -26,10 +26,34 @@ font-size: 30px;
 </style>
 <body>
 <h1>まりさふぃっしゅブログ</h1>
+<div class="menu">
+<tr>
+<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
+<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
+<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
+<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
+<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td>
+</tr>
+</div>
 <h2>お問い合わせ</h2>
 <h3>通常</h3>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRg9BDdYAM7t_LeBO2-mIHB88B9GQblJSIoDCJNpM8QUgCPg/viewform?embedded=true" width="640" height="770" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 <h3>依頼</h3>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScToKd7NQsWdgPSVtIY5vgPIe9tCE1UOFnRsE4Yk5UW6nRzWw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+<div class="notes">
+<p>まりさふぃっしゅ</p>
+<p>2024 marisafish</p>
+<tr>
+<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
+<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
+<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
+<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
+<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td><br>
+</tr>
+<a href="https://twitter.com/tirunoandreimu" target="_blank">Twitter</a>
+<a href="https://youtube.com/@marisafish967?feature=shared" target="_blank">Youtube</a>
+<a href="https://github.com/marisafish" target="_blank">Github</a>
+<p>このページはGithub Pagesを使用しています。</p>
+</div>
 </body>
 </html>
