--- a/sns.html
+++ b/sns.html
@@ -20,6 +20,11 @@ h1 {
 text-align:  center;
 font-size: 30px;
 }
+
+div[class^="menu"], [class^="notes"] {
+background-color: #122300;
+color: #fff;
+}
 </style>
 <body>
 <h1>まりさふぃっしゅブログ</h1>
