--- a/video.html
+++ b/video.html
@@ -26,6 +26,11 @@ iframe {
  width: 100%;
  height: 50%;
 }
+
+div[class^="menu"], [class^="notes"] {
+background-color: #122300;
+color: #fff;
+}
 </style>
 <body>
 <h1>まりさふぃっしゅブログ</h1>
