--- a/article.html
+++ b/article.html
@@ -64,27 +64,7 @@ color: #fff;
 </div>
 <div class="uvoice">
 <h1>ポイ活アプリ【Uvoice】</h1>
-<p>
-このアプリを使うと、稼げます。<br>
-GooglePlayのリンクを載せておきます。
-</p>
-<h1>注意</h1>
-<p>このアプリはAndroid限定です。</p>
-<h5>【Uvoice】持っているだけで勝手にポイントが貯まるアプリ！<br>
-紹介クーポンコード入力で楽々300ptゲット♪<br>
-----------------<br>
-クーポンコード: 38cnCECu5Q<br>
-----------------
-貯めたポイントはお買い物やゲームに使えます！</h5>
-<a href="https://play.google.com/store/apps/details?id=com.valuesccg.uvoice" target="_blank">GooglePlay</a>
-<div class="howtopointget">
-<h1>ポイントをもらう方法</h1>
-<p>※アプリのダウンロード方法は載せておきません。</p>
-<div class="howtolist">
-<p>1.アプリ内でメニューアイコンをタッチします。</p>
-<p>2.クーポンコード入力をタッチします。</p>
-<p>3.クーポンコードをコピペして入力し、登録をタッチします。</p>
-</div>
+<a href="https://marisafish.github.io/blog1/article/20240422.html">記事を見る</a>
 </div>
 <div class="Over10subscribers">
 <h1>チャンネル登録者10人突破！！</h1>
