--- a/contacts.html
+++ b/contacts.html
@@ -28,6 +28,11 @@ div[class^="menu"], [class^="notes"] {
 background-color: #122300;
 color: #fff;
 }
+
+div[class^="menu"], [class^="notes"] {
+background-color: #122300;
+color: #fff;
+}
 </style>
 <body>
 <h1>まりさふぃっしゅブログ</h1>
