--- a/sns.html
+++ b/sns.html
@@ -21,7 +21,7 @@ text-align:  center;
 font-size: 30px;
 }
 
-div[class^="menu"], [class^="notes"] {
+div[class="menu"], [class="notes"] {
 background-color: #122300;
 color: #fff;
 }
