--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="OKEem-cvzvdppw9CfprtI-PSsCItWvcpO27eV75D7Ls" />
     <title>お問い合わせ・・・まりさふぃっしゅブログ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <style>
@@ -36,6 +37,7 @@ color: #fff;
 }
 </style>
 <body>
+<meta name="google-site-verification" content="OKEem-cvzvdppw9CfprtI-PSsCItWvcpO27eV75D7Ls" />
 <nav class="navbar bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <h1 class="navbar-brand">まりさふぃっしゅブログ</h1>
