--- a/article.html
+++ b/article.html
@@ -96,7 +96,7 @@ color: #fff;
       </div>
     </div>
   </div>
-</nav><br><br><br><br>
+</nav><br><br><br>
 <h2>記事</h2>
 <div class="1">
 <div class="card" style="width: 18rem;">
