--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ color: #fff;
       </div>
     </div>
   </div>
-</nav>
+</nav><br><br><br>
 <h3>チャンネル説明</h3>
 <p>
 ゲーム、茶番、スマホ便利機能、ガジェット系などいろいろな実況をします。<br>
