--- a/sns.html
+++ b/sns.html
@@ -92,7 +92,7 @@ color: #fff;
       </div>
     </div>
   </div>
-</nav>
+</nav><br><br><br>
 <h2>SNS</h2>
 <h3>X</h3>
 <a class="twitter-timeline" href="https://twitter.com/tirunoandreimu?ref_src=twsrc%5Etfw">Tweets by tirunoandreimu</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
