--- a/video.html
+++ b/video.html
@@ -98,7 +98,7 @@ color: #fff;
       </div>
     </div>
   </div>
-</nav>
+</nav><br><br><br>
 <h2>動画</h2>
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-e2cc6a6a-90dc-4d5e-acac-f02c71698f17" data-elfsight-app-lazy></div>
