--- a/article.html
+++ b/article.html
@@ -59,7 +59,7 @@ color: #fff;
     <h1 class="navbar-brand">まりさふぃっしゅブログ</h1>
     <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
     </script>
-    <div class="gcse-search"></div>
+    <div class="gcse-search" style="width: 40;"></div>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
