--- a/article.html
+++ b/article.html
@@ -52,6 +52,10 @@ div[class^="menu"], [class^="notes"] {
 background-color: #122300;
 color: #fff;
 }
+
+div[class="gcse-search"]　{
+width: 60%;
+}
 </style>
 <body>
 <nav class="navbar bg-body-tertiary fixed-top">
@@ -59,7 +63,7 @@ color: #fff;
     <h1 class="navbar-brand">まりさふぃっしゅブログ</h1>
     <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
     </script>
-    <div class="gcse-search" style="width: 70%;"></div>
+    <div class="gcse-search"></div>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
