--- a/article.html
+++ b/article.html
@@ -92,13 +92,9 @@ left: 97%;
           <li class="nav-item">
             <div class="wrapper">
     <div class="search-area">
-      <form>
-        <input type="text" id="search-text" placeholder="検索ワードを入力">
-      </form>
-      <div class="search-result">
-        <div class="search-result__hit-num"></div>
-        <div id="search-result__list"></div>
-      </div>
+      <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
+</script>
+<div class="gcse-search"></div>
     </div>
           </li>
         </ul>
