--- a/index.html
+++ b/index.html
@@ -60,12 +60,16 @@ color: #fff;
 <nav class="navbar bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <h1 class="navbar-brand">まりさふぃっしゅブログ</h1>
+    <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
+    </script>
+    <div class="gcse-search"></div>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">まりさふぃっしゅブログ</h5>
+        
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
@@ -86,20 +90,16 @@ color: #fff;
           <li class="nav-item">
             <div class="wrapper">
     <div class="search-area">
-      <form>
-        <input type="text" id="search-text" placeholder="検索ワードを入力">
-      </form>
-      <div class="search-result">
-        <div class="search-result__hit-num"></div>
-        <div id="search-result__list"></div>
-      </div>
+      <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
+</script>
+<div class="gcse-search"></div>
     </div>
           </li>
         </ul>
       </div>
     </div>
   </div>
-</nav><br><br><br>
+</nav><br><br><br><br><br>
 <h3>チャンネル説明</h3>
 <p>
 ゲーム、茶番、スマホ便利機能、ガジェット系などいろいろな実況をします。<br>
