--- a/article/20240422.html
+++ b/article/20240422.html
@@ -86,6 +86,128 @@ GooglePlayのリンクを載せておきます。
 </div>
 </div>
 </div>
+<form action="https://docs.google.com/forms/d/e/1FAIpQLSdO5O3rC0RlZJI6TpBwpcI7esBKEeO0UD7BiEG3T07XFdTv8g/formResponse" target="hidden_iframe" method="post" onsubmit="return test(this.wcheck.value)">
+<input type="hidden" name="entry.1092079290" value="">
+<input type="hidden" name="entry.896278767" value="">
+<p><input name="entry.1092079290" placeholder="名前" value="名無し" required class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" style="width: 30%;"></p>
+<p><textarea name="entry.896278767" placeholder="コメント" rows="10" cols="90" maxlength="400" id="wcheck" required class="form-control" aria-label="With textarea" style="width: 500"></textarea></p>
+<input type="submit" id="submitbutton" value="送信" class="btn btn-primary btn-lg">
+</form>
+<iframe onload='if(submitted){window.location="";}' id=hidden_iframe name=hidden_iframe style=display:none></iframe>
+<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<div id="comments"></div>
+<div class="notes">
+<p>まりさふぃっしゅ</p>
+<p>2024 marisafish</p>
+<tr>
+<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
+<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
+<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
+<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
+<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td><br>
+</tr>
+<a href="https://twitter.com/tirunoandreimu" target="_blank">Twitter</a>
+<a href="https://youtube.com/@marisafish967?feature=shared" target="_blank">Youtube</a>
+<a href="https://github.com/marisafish" target="_blank">Github</a>
+</div>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  setUpAccordion();
+});
+
+/**
+ * ブラウザの標準機能(Web Animations API)を使ってアコーディオンのアニメーションを制御します
+ */
+const setUpAccordion = () => {
+  const details = document.querySelectorAll(".js-details");
+  const RUNNING_VALUE = "running"; // アニメーション実行中のときに付与する予定のカスタムデータ属性の値
+  const IS_OPENED_CLASS = "is-opened"; // アイコン操作用のクラス名
+
+  details.forEach((element) => {
+    const summary = element.querySelector(".js-summary");
+    const content = element.querySelector(".js-content");
+
+    summary.addEventListener("click", (event) => {
+      // デフォルトの挙動を無効化
+      event.preventDefault();
+
+      // 連打防止用。アニメーション中だったらクリックイベントを受け付けないでリターンする
+      if (element.dataset.animStatus === RUNNING_VALUE) {
+        return;
+      }
+
+      // detailsのopen属性を判定
+      if (element.open) {
+        // アコーディオンを閉じるときの処理
+        // アイコン操作用クラスを切り替える(クラスを取り除く)
+        element.classList.toggle(IS_OPENED_CLASS);
+
+        // アニメーションを実行
+        const closingAnim = content.animate(closingAnimKeyframes(content), animTiming);
+        // アニメーション実行中用の値を付与
+        element.dataset.animStatus = RUNNING_VALUE;
+
+        // アニメーションの完了後に
+        closingAnim.onfinish = () => {
+          // open属性を取り除く
+          element.removeAttribute("open");
+          // アニメーション実行中用の値を取り除く
+          element.dataset.animStatus = "";
+        };
+      } else {
+        // アコーディオンを開くときの処理
+        // open属性を付与
+        element.setAttribute("open", "true");
+
+        // アイコン操作用クラスを切り替える(クラスを付与)
+        element.classList.toggle(IS_OPENED_CLASS);
+
+        // アニメーションを実行
+        const openingAnim = content.animate(openingAnimKeyframes(content), animTiming);
+        // アニメーション実行中用の値を入れる
+        element.dataset.animStatus = RUNNING_VALUE;
+
+        // アニメーション完了後にアニメーション実行中用の値を取り除く
+        openingAnim.onfinish = () => {
+          element.dataset.animStatus = "";
+        };
+      }
+    });
+  });
+}
+
+/**
+ * アニメーションの時間とイージング
+ */
+const animTiming = {
+  duration: 250,
+  easing: "ease-out"
+};
+
+/**
+ * アコーディオンを閉じるときのキーフレーム
+ */
+const closingAnimKeyframes = (content) => [
+  {
+    height: content.offsetHeight + 'px', // height: "auto"だとうまく計算されないため要素の高さを指定する
+  }, {
+    height: 0,
+  }
+];
+
+/**
+ * アコーディオンを開くときのキーフレーム
+ */
+const openingAnimKeyframes = (content) => [
+  {
+    height: 0,
+  }, {
+    height: content.offsetHeight + 'px',
+  }
+];
+
+
+</script>
 <div class="notes">
 <p>まりさふぃっしゅ</p>
 <p>2024 marisafish</p>
@@ -102,4 +224,4 @@ GooglePlayのリンクを載せておきます。
 <p>このページはGithub Pagesを使用しています。</p>
 </div>
 </body>
-      </html>
+</html>
