--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>記事・・・まりさふぃっしゅブログ</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <style>
 @import url("https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&display=swap");
 html, body {
@@ -50,16 +51,49 @@ color: #fff;
 }
 </style>
 <body>
-<h1>まりさふぃっしゅブログ</h1>
-<div class="menu">
-<tr>
-<td><a href="https://marisafish.github.io/blog1/">ホーム</a></td>
-<td><a href="https://marisafish.github.io/blog1/article.html">記事</a></td>
-<td><a href="https://marisafish.github.io/blog1/sns.html">SNS</a></td>
-<td><a href="https://marisafish.github.io/blog1/video.html">動画</a></td>
-<td><a href="https://marisafish.github.io/blog1/contacts.html">お問い合わせ</a></td>
-</tr>
-</div>
+<nav class="navbar bg-body-tertiary fixed-top">
+  <div class="container-fluid">
+    <h1 class="navbar-brand">まりさふぃっしゅブログ</h1>
+    <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
+    </script>
+    <div class="gcse-search"></div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">まりさふぃっしゅブログ</h5>
+        
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <td><a href="https://marisafish.github.io/blog1/" class="nav-link">ホーム</a></td>
+          </li>
+          <li class="nav-item">
+            <td><a href="https://marisafish.github.io/blog1/article.html" class="nav-link">記事</a></td>
+          </li>
+          <li class="nav-item">
+            <td><a href="https://marisafish.github.io/blog1/sns.html" class="nav-link">SNS</a></td>
+            <ul class="nav-item">
+              <td><a href="https://marisafish.github.io/blog1/video.html" class="nav-link">動画</a></td>
+              <td><a href="https://marisafish.github.io/blog1/contacts.html"class="nav-link">お問い合わせ</a></td>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <div class="wrapper">
+    <div class="search-area">
+      <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
+</script>
+<div class="gcse-search"></div>
+    </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav><br><br><br><br>
 <div>
 <img src="https://img.freepik.com/free-vector/404-error-with-a-landscape-concept-illustration_114360-7898.jpg?size=626&ext=jpg" width="560" height="315"></img>
 <h1><b>NOT FOUND</b></h1>
@@ -91,5 +125,6 @@ color: #fff;
 <a href="https://youtube.com/@marisafish967?feature=shared" target="_blank">Youtube</a>
 <a href="https://github.com/marisafish" target="_blank">Github</a>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
