--- a/article.html
+++ b/article.html
@@ -120,6 +120,14 @@ GooglePlayのリンクを載せておきます。</p>
 <h1>チャンネル登録者10人突破！！</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jDeIdsMSdag"></iframe>
 </div>
+<div class="card" style="width: 18rem;">
+  <img src="https://png.pngtree.com/png-clipart/20190614/original/pngtree-vector-rss-feed-icon-png-image_3785595.jpg" class="card-img-top" width="560" height="315">
+  <div class="card-body">
+    <h5 class="card-title">RSSフィードを自作する方法</h5>
+    <p class="card-text">今回はRSSフィードを自作する方法を紹介します。</p>
+    <a href="https://marisafish.github.io/blog1/article/20240423.html" class="btn btn-primary">記事を見る</a>
+  </div>
+</div>
 </div>
 <div class="notes">
 <p>まりさふぃっしゅ</p>
