--- a/sns.html
+++ b/sns.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="OKEem-cvzvdppw9CfprtI-PSsCItWvcpO27eV75D7Ls" />
-    <title>SNS・・・まりさふぃっしゅブログ</title>
+<meta name="google-site-verification" content="BWXM_ckKI37GdAFVx8ZsDUIMgkzKNd2wP5y9od6bHbY" />    
+<title>SNS・・・まりさふぃっしゅブログ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <style>
 @import url("https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&display=swap");
@@ -49,8 +49,8 @@ color: #fff;
 }
 </style>
 <body>
-<meta name="google-site-verification" content="OKEem-cvzvdppw9CfprtI-PSsCItWvcpO27eV75D7Ls" />
-<<nav class="navbar bg-body-tertiary fixed-top">
+<meta name="google-site-verification" content="BWXM_ckKI37GdAFVx8ZsDUIMgkzKNd2wP5y9od6bHbY" />
+<nav class="navbar bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <h1 class="navbar-brand">まりさふぃっしゅブログ</h1>
     <script async src="https://cse.google.com/cse.js?cx=424b9347fca59470f">
