--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@ html, body {
     background-image: linear-gradient(to top right, #ff80ec, #fff382);
     background-repeat: no-repeat;
     background-position:60% 60%;
-    background-size:cover;
+    background-size:500%;
 }
 
 * {
@@ -29,6 +29,7 @@ font-size: 30px;
 div[class^="menu"], [class^="notes"] {
 background-color: #122300;
 color: #fff;
+width: 200%;
 }
 
 div[class^="menu"], [class^="notes"] {
