--- a/article.html
+++ b/article.html
@@ -15,7 +15,7 @@ html, body {
     background-image: linear-gradient(to top right, #ff80ec, #fff382);
     background-repeat: no-repeat;
     background-position:60% 60%;
-    background-size: cover;
+    background-size: 500%;
 }
 
 * a {
