--- a/article.html
+++ b/article.html
@@ -120,7 +120,7 @@ GooglePlayのリンクを載せておきます。</p>
 <div class="card" style="width: 565;">
 <h1>チャンネル登録者10人突破！！</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jDeIdsMSdag"></iframe>
-</div>
+</div><br>
 <div class="card" style="width: 18rem;">
   <img src="https://png.pngtree.com/png-clipart/20190614/original/pngtree-vector-rss-feed-icon-png-image_3785595.jpg" class="card-img-top" width="560" height="315">
   <div class="card-body">
