--- a/video.html
+++ b/video.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="BWXM_ckKI37GdAFVx8ZsDUIMgkzKNd2wP5y9od6bHbY" />
-    <title>SNS・・・まりさふぃっしゅブログ</title>
+    <title>動画・・・まりさふぃっしゅブログ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link rel="icon" href="https://raw.githubusercontent.com/marisafish/blog1/main/favicon%20(1)%20(1).ico" id="favicon">
 <style>
 @import url("https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&display=swap");
 html, body {
