article.html の更新

--- a/article.html
+++ b/article.html
@@ -144,6 +144,7 @@ GooglePlayのリンクを載せておきます。</p>
 <a href="https://twitter.com/tirunoandreimu" target="_blank">Twitter</a>
 <a href="https://youtube.com/@marisafish967?feature=shared" target="_blank">Youtube</a>
 <a href="https://github.com/marisafish" target="_blank">Github</a>
+<a href="https://marisafish.github.io/blog1/rss.xml"　target="_blank">RSSフィード</a>
 <p>このページはGithub Pagesを使用しています。</p>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
