--- a/sns.html
+++ b/sns.html
@@ -97,6 +97,10 @@ color: #fff;
 <h2>SNS</h2>
 <h3>X</h3>
 <a class="twitter-timeline" href="https://twitter.com/tirunoandreimu?ref_src=twsrc%5Etfw">Tweets by tirunoandreimu</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<h1>広告</h1>
+<script type="text/javascript">
+document.write('<scr'+'ipt type="text/javascript" src="https://ad.ddo.jp/300x250.js.php?ddo_id=marisafishblog&ddo_i='+Math.floor((new Date()).getTime()/1000/60)+'"><'+'/scr'+'ipt>');
+</script>
 <div class="notes">
 <p>まりさふぃっしゅ</p>
 <p>2024 marisafish</p>
