--- a/video.html
+++ b/video.html
@@ -103,6 +103,10 @@ color: #fff;
 <h2>動画</h2>
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-e2cc6a6a-90dc-4d5e-acac-f02c71698f17" data-elfsight-app-lazy></div>
+<h1>広告</h1>
+<script type="text/javascript">
+document.write('<scr'+'ipt type="text/javascript" src="https://ad.ddo.jp/300x250.js.php?ddo_id=marisafishblog&ddo_i='+Math.floor((new Date()).getTime()/1000/60)+'"><'+'/scr'+'ipt>');
+</script>
 <div class="notes">
 <p>まりさふぃっしゅ</p>
 <p>2024 marisafish</p>
