contacts.html の更新

--- a/contacts.html
+++ b/contacts.html
@@ -88,6 +88,10 @@ color: #fff;
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRg9BDdYAM7t_LeBO2-mIHB88B9GQblJSIoDCJNpM8QUgCPg/viewform?embedded=true" width="640" height="770" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 <h3>依頼</h3>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScToKd7NQsWdgPSVtIY5vgPIe9tCE1UOFnRsE4Yk5UW6nRzWw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+<h1>広告</h1>
+<script type="text/javascript">
+document.write('<scr'+'ipt type="text/javascript" src="https://ad.ddo.jp/300x250.js.php?ddo_id=marisafishblog&ddo_i='+Math.floor((new Date()).getTime()/1000/60)+'"><'+'/scr'+'ipt>');
+</script>
 <div class="notes">
 <p>まりさふぃっしゅ</p>
 <p>2024 marisafish</p>
