--- a/404.html
+++ b/404.html
@@ -111,6 +111,10 @@ color: #fff;
 </div>
 <h4>Designed by FreePik</h4>
 </div>
+<h1>広告</h1>
+<script type="text/javascript">
+document.write('<scr'+'ipt type="text/javascript" src="https://ad.ddo.jp/300x250.js.php?ddo_id=marisafishblog&ddo_i='+Math.floor((new Date()).getTime()/1000/60)+'"><'+'/scr'+'ipt>');
+</script>
 <div class="notes">
 <p>まりさふぃっしゅ</p>
 <p>2024 marisafish</p>
