--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@ color: #fff;
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <td><a href="https://marisafish.github.io/blog1/" class="nav-link">ホーム</a></td>
+            <td><a href="https://marisafishblog.ddo.jp" class="nav-link">ホーム</a></td>
           </li>
           <li class="nav-item">
-            <td><a href="https://marisafish.github.io/blog1/article.html" class="nav-link">記事</a></td>
+            <td><a href="https://marisafishblog.ddo.jp/article.html" class="nav-link">記事</a></td>
           </li>
           <li class="nav-item">
-            <td><a href="https://marisafish.github.io/blog1/sns.html" class="nav-link">SNS</a></td>
+            <td><a href="https://marisafishblog.ddo.jp/sns.html" class="nav-link">SNS</a></td>
             <ul class="nav-item">
-              <td><a href="https://marisafish.github.io/blog1/video.html" class="nav-link">動画</a></td>
-              <td><a href="https://marisafish.github.io/blog1/contacts.html"class="nav-link">お問い合わせ</a></td>
+              <td><a href="https://marisafishblog.ddo.jp/video.html" class="nav-link">動画</a></td>
+              <td><a href="https://marisafishblog.ddo.jp/contacts.html"class="nav-link">お問い合わせ</a></td>
             </ul>
           </li>
           <li class="nav-item">
