--- a/index.html
+++ b/index.html
@@ -180,11 +180,9 @@ document.write('<scr'+'ipt type="text/javascript" src="https://ad.ddo.jp/300x250
      crossorigin="anonymous"></script>
 <!-- 広告 -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:210px;height:210px"
      data-ad-client="ca-pub-9366901573257990"
-     data-ad-slot="3979808616"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="3979808616"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
